--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -11,13 +11,11 @@ body {
     font-style: oblique;
     background-repeat: no-repeat;
     background-size: cover;
-
 }
 
-.jumbotron{
-    background-color: rgb(255, 105, 51);
+.menu{
     font-style: oblique;
-    color: rgb(247, 244, 72);
+    color: rgb(247, 246, 240);
     height: 10px;
     align-items: center;
     text-align: center;
