--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,6 +1,6 @@
 body {
     background-size: cover;
-    background-image: url(../IMAGES/pizza2.jpg);
+    background-image: url(../IMAGES/pizza1.jpg);
 }
 
 .navbar{
@@ -10,12 +10,10 @@ body {
     font-style: oblique;
 }
 
-.menu{
-    font-style: oblique;
-    color: rgb(247, 246, 240);
-    height: 10px;
-    align-items: center;
+.container{
+    color: rgb(253, 241, 69);
     text-align: center;
+    font-style: oblique;
 }
 
 
