add form groups

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -25,7 +25,7 @@ body {
 
 .card{
     align-items: center;
-    background-image: url(../IMAGES/pizza3.png);
+    background-image: url(../IMAGES/pizza3.jpg);
     background-size: cover;
 }
 
