--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -25,8 +25,7 @@ body {
 
 .card{
     align-items: center;
-    background-color: rgb(87, 201, 253);
-    background-size: cover;
+    background-image: url(../IMAGES/download\ \(7\).jpg);
 }
 
 h4{
