add js functions

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -23,7 +23,7 @@ body {
     height: fit-content;
 }
 
-.card{
+.order{
     align-items: center;
     background-image: url(../IMAGES/download\ \(7\).jpg);
 }
